--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "telegram_bot_token": "7414850323:AAGLt8J8JTdyxmbHmRuRnBsYUiWr_dVa_1k,
-  "telegram_chat_id": "5229677741",
+  "bot_token": "7414850323:AAGLt8J8JTdyxmbHmRuRnBsYUiWr_dVa_1k",
+  "chat_id": "5229677741",
   "accounts": [
     {
     "email": "totonngesot08@gmail.com", 
